--- a/pp/static/pp/css/index.css
+++ b/pp/static/pp/css/index.css
@@ -106,6 +106,7 @@ canvas {
     position: fixed;
     top: 10em;
     opacity: 0;
+    z-index: 2;
     /* animation: inc-opacity 3s ease-out 1.5s 1 forwards normal; */
 }
 .scroll-buttons-container ul{
@@ -149,7 +150,7 @@ canvas {
     border-radius: 100%;
     padding: 10px;
     opacity: 0;
-
+    z-index: 2;
     cursor: pointer;
     color:var(--green);
     border-color: var(--green);
@@ -158,6 +159,7 @@ canvas {
 
 #resume-side-btt:hover{
     animation: RR-btts-hover 0.3s ease-out 0s 1 forwards normal;
+    opacity:1;
     box-shadow: 0 0 10px var(--green),
     0 0 20px var(--green),
     0 0 40px var(--green),
@@ -172,7 +174,7 @@ canvas {
     border: 2px solid var(--blue);
     border-radius: 100%;
     padding: 10px;
-
+    z-index: 2;
 
     color:var(--blue);
     cursor: pointer;
@@ -181,7 +183,9 @@ canvas {
 
 }
 #lets-talk-side-btt:hover{
+    opacity:1;
     animation: LT-btts-hover 0.3s ease-out 0s 1 forwards normal;
+    opacity:1;
     box-shadow: 0 0 10px var(--blue),
     0 0 20px var(--blue),
     0 0 40px var(--blue),
