--- a/pp/static/pp/css/index.css
+++ b/pp/static/pp/css/index.css
@@ -31,16 +31,69 @@ body::-webkit-scrollbar{
     width: 0;
     height: 0;
 }
+/* ########################## pre loadere ###################################*/
 #pre-loader{
-    background:#000 url(../pp/media/logo.png) no-repeat center;
+    background:silver ;
     background-size: 15%;
     height: 100vh;
     width: 100vw;
     position: fixed;
     z-index: 1000;
 }
+.flex1{
+    display:inline-block;
+    /* justify-content: center;
+    align-items: center; */
+    position: relative;
+    height: 100%;
+    width: 100%;
+    top: 25%;
+}
 
+.head{
+    color: var(--red);
+    font-weight: bold;
+    font-size: 6vh;
+    text-align: center;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
 
+.loader {
+    /* background-color: red; */
+    /* overflow: hidden; */
+    /* width: 100%;
+    height: 100%; */
+    /* position: relative; */
+    /* top: 0; left: 0; */
+    display: flex;
+    align-items: center;
+    align-content: center; 
+    justify-content: center;  
+    z-index: 100000;
+  }
+  
+  .loader__element {
+    border-radius: 100%;
+    border: 6px solid var(--blue);
+    margin: calc(10px *2);
+  }
+  
+  .loader__element:nth-child(1) {
+    animation: preloader .6s ease-in-out alternate infinite;
+  }
+  .loader__element:nth-child(2) {
+    animation: preloader .6s ease-in-out alternate .2s infinite;
+  }
+  
+  .loader__element:nth-child(3) {
+    animation: preloader .6s ease-in-out alternate .4s infinite;
+  }
+  
+  @keyframes preloader {
+    100% { transform: scale(2); }
+  }
+/* ########################## pre loadere ###################################*/
 .primary-header{
     display: flex;
     align-items: center;
