pdf funtionallity added

--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -70,7 +70,7 @@
         </ul>
       </div>
       <div class="right-side-btts">
-        <a href=""><span id="resume-side-btt">RS</span></a>
+        <a href="{% url 'pp:resume_download' %}" target="_blank"><span id="resume-side-btt">RS</span></a>
       </div>
 
       <div class="right-side-btts">
