--- a/pp/templates/pp/testimonials.html
+++ b/pp/templates/pp/testimonials.html
@@ -8,33 +8,39 @@
     <div class="writtenT ">
         <div class="swiper">
             <div class="swiper-wrapper">
+                
+                {% for name,id,title,review,e,f,prio in data %}
+
                 <div class="swiper-slide">
                     <div class="testimonialsBox">
                         <img src="{% static 'pp/images/quotes.png' %}" alt="err-quote" class="quote">
 
                         <div class="content">
-                            <p>Lo obcaeta impedit! Dicta, beat eos voluptatem, minus et quisquam? sit amet consectetur
-                                adipisicing elit. Laudantium, repellendus.</p>
+                            <p>{{review}}</p>
                             <div class="details">
-                                <!-- <div class="imgBx"> <img src="" alt="user-err"></div> -->
-                                <h3> <a href=""class="hover-underline-animation"> someone famous </a><span><br> creative designer</span></h3>
+                                {% if id != "none"%}
+                                
+                                <h3> <a target="_blank" href="{{id}}" class="hover-underline-animation"> {{name}} </a><span><br> {{title}}</span></h3>
+                                
+                                {%else%}
+                                
+                                <h3> <a href="" class="hover-underline-animation"> {{name}} </a><span><br> {{title}}</span></h3>
+
+                                {%endif%}
+                            
                             </div>
                         </div>
                     </div>
 
                 </div>
-                <div class="swiper-slide">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, veniam iusto delectus ea deleniti
-                    non suscipit hic similique. Doloribus, expedita aperiam deleniti id sapiente sint saepe cum hic
-                    repellendus maxime.
-                </div>
-                <div class="swiper-slide">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, veniam iusto delectus ea deleniti
-                    non suscipit hic similique. Doloribus, expedita aperiam deleniti id sapiente sint saepe cum hic
-                    repellendus maxime.
-                </div>
+
+                {% endfor %}
             </div>
         </div>
+
+
+
+
         <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
         <script>
             var swiper = new Swiper('.swiper', {
@@ -60,7 +66,10 @@
     <div class="writeT">
         <div class="login-box">
             <h2>Write a Review</h2>
-            <form>
+            
+            <form  method="post">
+                {% csrf_token %}
+
                 <div class="user-box">
                     <input type="text" name="name" maxlength="20" required="true">
                     <label>Full Name</label>
@@ -77,12 +86,15 @@
                     <input type="text" name="review" maxlength="350" required="true">
                     <label>Review</label>
                 </div>
-                <a href="#">
+                
+
+
+                <a type="post" >
                     <span></span>
                     <span></span>
                     <span></span>
                     <span></span>
-                    Submit
+                    <button type="submit" value="review-post" name="review-post" id="wr-post-button">SUBMIT</button>
                 </a>
             </form>
         </div>
