--- a/pp/static/pp/css/index.css
+++ b/pp/static/pp/css/index.css
@@ -34,9 +34,9 @@ body::-webkit-scrollbar{
 /* ########################## pre loadere ###################################*/
 #pre-loader{
     background:silver ;
-    background-size: 15%;
-    height: 100vh;
-    width: 100vw;
+    background-size: 100%;
+    height: 100%;
+    width: 100%;
     position: fixed;
     z-index: 1000;
 }
@@ -60,39 +60,34 @@ body::-webkit-scrollbar{
 }
 
 .loader {
-    /* background-color: red; */
-    /* overflow: hidden; */
-    /* width: 100%;
-    height: 100%; */
-    /* position: relative; */
-    /* top: 0; left: 0; */
+
     display: flex;
     align-items: center;
     align-content: center; 
     justify-content: center;  
     z-index: 100000;
-  }
+}
   
-  .loader__element {
-    border-radius: 100%;
-    border: 6px solid var(--blue);
-    margin: calc(10px *2);
-  }
-  
-  .loader__element:nth-child(1) {
-    animation: preloader .6s ease-in-out alternate infinite;
-  }
-  .loader__element:nth-child(2) {
-    animation: preloader .6s ease-in-out alternate .2s infinite;
-  }
-  
-  .loader__element:nth-child(3) {
-    animation: preloader .6s ease-in-out alternate .4s infinite;
-  }
-  
-  @keyframes preloader {
-    100% { transform: scale(2); }
-  }
+.loader__element {
+border-radius: 100%;
+border: 6px solid var(--blue);
+margin: calc(10px *2);
+}
+
+.loader__element:nth-child(1) {
+animation: preloader .6s ease-in-out alternate infinite;
+}
+.loader__element:nth-child(2) {
+animation: preloader .6s ease-in-out alternate .2s infinite;
+}
+
+.loader__element:nth-child(3) {
+animation: preloader .6s ease-in-out alternate .4s infinite;
+}
+
+@keyframes preloader {
+100% { transform: scale(2); }
+}
 /* ########################## pre loadere ###################################*/
 .primary-header{
     display: flex;
@@ -100,8 +95,6 @@ body::-webkit-scrollbar{
     justify-content: space-between;
     scroll-snap-align: center;
 }
-
-
 .sr-only{
     border: 0 !important;
 	clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
@@ -117,21 +110,19 @@ body::-webkit-scrollbar{
 }
 
 /* ##########background CSS############### */
-
 #particles-js{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: fixed;
     background: #505b66;
     z-index: -1;
 }
-
 canvas {
-  display: block;
+  display: block; 
   vertical-align: bottom;
 }
 .border-line{
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 #root{
@@ -316,13 +307,24 @@ a{
 }
 
 /* RIGHT SIDE BAR */
+
+.right-side-btts{
+    position: relative;
+}
+.right-side-btts > a{
+    position: absolute;
+}
+.right-side-btts > a > span{
+    position: fixed;
+}
+
 .email-right-side-bar{
     height: calc(100vh - 100px);
     display: flex;
     opacity: 0;
     flex-direction: column-reverse;
 }
-.email-right-side-bar >div> a{
+.email-right-side-just{
     color: white;
     text-decoration-skip-ink: auto;
     text-decoration: none;
@@ -680,10 +682,12 @@ a{
     width: 100%;
     text-align: left;
     font: bold 12px sans-serif;
+    
     padding-bottom: 10px;
     padding-top: 10px;
-    padding-right: 20px;
-    padding-left: 80px;
+    padding-right: 30px;
+    padding-left: 90px;
+
     /* margin-left: 80px; */
     z-index: -1;
     /* margin-right: 80px; */
@@ -1114,4 +1118,96 @@ label{
 @keyframes inc-opacity {
     0%{ opacity: 0;}   
     100%{opacity: 1;}      
+}
+
+
+
+@media (max-width:700px){
+
+    #root{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+    #resume-side-btt,#lets-talk-side-btt,.email-right-side-bar,.socials-left-side-bar > ul,
+    .scroll-buttons-container
+    {display: none !important; visibility:none !important;z-index: -1000 !important;}
+    
+    #section-home{
+        display: inline-grid;
+        height: unset;
+    }
+    .title{
+        padding:0 0 0 0;
+        height: fit-content;
+    }
+    .title-text{
+        font-size: 6rem;
+    }
+    .title-below-para{
+        font-size: 1.9rem;
+    } 
+    .hero-right-side{
+        padding: 0 0 0 0;
+
+    }
+    .portfolio{
+        top: 5%;
+    }
+    .resume-button{
+        top: 0em;
+    }
+    section{
+        height: fit-content !important;
+    }
+    
+    .project-visual{
+        /* grid-area: 6/1/1/1; */
+    }
+    .list{
+        padding: 20px;
+        display: block !important;
+    }
+    .videowrapper{
+        filter: none;
+    }
+}
+
+
+@media (max-width:950px){
+    .about-inner{
+        display: contents;
+    }
+    .inner-left{
+        padding: 0 0 0 0;   
+    }
+    .inner-left p{
+        /* width: unset !important; */
+        min-width: none !important;
+        max-width: none !important;
+        padding: 0 4% 0 4%;
+    }
+    .inner-right{
+        width: unset;
+        margin: unset;
+    }
+    .writeT{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .writtenT{
+        padding: 10% 10% 0% 10% !important;
+    }
+    .login-box{
+        width: 70%;
+        transform: unset !important;
+        max-width: unset;
+        position: unset !important;
+        top: unset;
+        left: unset;
+    }
+    .testimonials{
+        grid-gap: 0px !important;
+    }
 }
