heroku settings added

--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -496,6 +496,14 @@
         scrol_btts.classList.add("inc_opacity");
 
       });
+
+      setTimeout(function(){
+        var pre_loader=document.querySelector("#pre-loader");
+        pre_loader.remove();
+      },30000)
+
+
+
     </script>
   </body>
 </html>
