--- a/pp/static/pp/css/index.css
+++ b/pp/static/pp/css/index.css
@@ -933,10 +933,10 @@ a{
     /* box-shadow: 0 15px 25px -15px rgb(0 0 0 / 60%); */
 }
 .close-up{
-    animation: slide-up 1s ease-in 0s 1 forwards normal;
+    animation: slide-up 0.6s ease-out 0s 1 forwards normal;
 }
 .close-down{
-    animation: slide-down 1s ease-in 0s 1 forwards normal;
+    animation: slide-down 0.6s ease-in 0s 1 forwards normal;
 }
 .LT:hover{
     box-shadow: 0px 20px 25px 0px rgb(0 0 0 / 60%);
