--- a/pp/templates/pp/testimonials.html
+++ b/pp/templates/pp/testimonials.html
@@ -9,8 +9,7 @@
         <div class="swiper">
             <div class="swiper-wrapper">
                 
-                {% for name,id,title,review,e,f,prio in data %}
-
+                {% for i,name,id,priority,title,review,turnonn in data %}
                 <div class="swiper-slide">
                     <div class="testimonialsBox">
                         <img src="{% static 'pp/images/quotes.png' %}" alt="err-quote" class="quote">
