aws ses removed and relation setuped for letstalk

--- a/pp/templates/pp/testimonials.html
+++ b/pp/templates/pp/testimonials.html
@@ -75,8 +75,8 @@
                     <label>Full Name</label>
                 </div>
                 <div class="user-box">
-                    <input type="text" name="ldp" maxlength="50" >
-                    <label>Linked In (Optional)</label>
+                    <input type="text" name="ldp" maxlength="50" required="false">
+                    <label>Linked In(None=NULL)</label>
                 </div>
                 <div class="user-box">
                     <input type="text" name="title" maxlength="20" required="true">
