--- a/pp/static/pp/css/testimonials.css
+++ b/pp/static/pp/css/testimonials.css
@@ -194,7 +194,7 @@
   .login-box form a {
     position: relative;
     display: inline-block;
-    padding: 10px 20px;
+    padding: 5px 10px;
     color: #03e9f4;
     font-size: 16px;
     text-decoration: none;
@@ -306,4 +306,6 @@
   animation: inherit;
   margin: 0px;
   padding: 0px;
+  height: 30px;
+  width: 100px;
 }
